[gd_scene load_steps=6 format=3 uid="uid://4plc4vhymybs"]

[ext_resource type="Script" uid="uid://bkn5mac6gdvq3" path="res://addons/oasis_dialogue/canvas/canvas.gd" id="1_pyvqf"]
[ext_resource type="Theme" uid="uid://b17l0ux5wllk5" path="res://addons/oasis_dialogue/canvas/canvas_theme.tres" id="1_ta1sa"]
[ext_resource type="Texture2D" uid="uid://bfkmd1luqmlue" path="res://addons/oasis_dialogue/assets/character.png" id="2_4e1bp"]
[ext_resource type="Texture2D" uid="uid://pfc7nrl5emou" path="res://addons/oasis_dialogue/assets/dialogue.png" id="3_4e1bp"]

[sub_resource type="Theme" id="Theme_4e1bp"]
default_font_size = 12

[node name="Canvas" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ta1sa")
script = ExtResource("1_pyvqf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HeaderMarginContainer"]
layout_mode = 2

[node name="AddCharacter" type="TextureButton" parent="VBoxContainer/HeaderMarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("2_4e1bp")
ignore_texture_size = true
stretch_mode = 4

[node name="AddBranch" type="TextureButton" parent="VBoxContainer/HeaderMarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("3_4e1bp")
ignore_texture_size = true
stretch_mode = 4

[node name="RemoveCharacter" type="Button" parent="VBoxContainer/HeaderMarginContainer/HBoxContainer"]
layout_mode = 2
text = "remove"

[node name="SaveProject" type="Button" parent="VBoxContainer/HeaderMarginContainer/HBoxContainer"]
layout_mode = 2
text = "save"

[node name="LoadProject" type="Button" parent="VBoxContainer/HeaderMarginContainer/HBoxContainer"]
layout_mode = 2
text = "load"

[node name="SplitContainer" type="SplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="VBoxContainer/SplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = SubResource("Theme_4e1bp")
hide_folding = true
hide_root = true
scroll_horizontal_enabled = false

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer/SplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
grid_pattern = 1
panning_scheme = 1
minimap_enabled = false
show_zoom_buttons = false
show_grid_buttons = false
show_minimap_button = false

[node name="FooterMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Status" type="Label" parent="VBoxContainer/FooterMarginContainer"]
layout_mode = 2
vertical_alignment = 1

[node name="StatusTimer" type="Timer" parent="VBoxContainer/FooterMarginContainer/Status"]
unique_name_in_owner = true
one_shot = true

[connection signal="button_up" from="VBoxContainer/HeaderMarginContainer/HBoxContainer/AddCharacter" to="." method="_on_add_character_button_up"]
[connection signal="button_up" from="VBoxContainer/HeaderMarginContainer/HBoxContainer/AddBranch" to="." method="_on_add_branch_button_up"]
[connection signal="button_up" from="VBoxContainer/HeaderMarginContainer/HBoxContainer/RemoveCharacter" to="." method="_on_remove_character_button_up"]
[connection signal="button_up" from="VBoxContainer/HeaderMarginContainer/HBoxContainer/SaveProject" to="." method="_on_save_project_button_up"]
[connection signal="button_up" from="VBoxContainer/HeaderMarginContainer/HBoxContainer/LoadProject" to="." method="_on_load_project_button_up"]
[connection signal="item_activated" from="VBoxContainer/SplitContainer/Tree" to="." method="_on_tree_item_activated"]
[connection signal="item_edited" from="VBoxContainer/SplitContainer/Tree" to="." method="_on_tree_item_edited"]
[connection signal="item_selected" from="VBoxContainer/SplitContainer/Tree" to="." method="_on_tree_item_selected"]
[connection signal="timeout" from="VBoxContainer/FooterMarginContainer/Status/StatusTimer" to="." method="_on_status_timer_timeout"]
